fix alignment by making advantage icon smaller

--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,11 @@ h1 {
 	padding-bottom: 20px;
 }
 
+.advantage-icon {
+	font-size: 17px;
+	text-align: center;
+}
+
 @media only screen and (max-width: 600px) {
 	.team-container {
 			text-align: center;
